--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,5 +1,27 @@
 {% extends "layout.html" %}
 {% block body %}
+<body role="document">
+  <nav class="navbar navbar-inverse">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">bgeo</a>
+    </div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="/">Home<span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="about.html">About</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>   
     <div class="page-header">
         <div class="container">
        <h1>About bgeo</h1>
@@ -8,7 +30,7 @@
     <div class="container-fluid theme-showcase" role="main">
     <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-10 col-md-offset-1">
           <h2>Data</h2>
           <p>The data used for locating places is sourced from <a href="http://www.openbible.info/geo">www.openbible.info/geo</a>. The sources given there are as follows:
             <ul>
@@ -21,10 +43,14 @@
             </ul>
           </p>
         </div>
-      <hr>
-
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+        <hr>
       <footer>
         <p>&copy; 2016 Company, Inc.</p>
       </footer>
+    </div>
+    </div>
     </div> <!-- /container -->
   {% endblock %}
