--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,27 @@
 {% extends "layout.html" %}
 {% block body %}
+<body role="document">
+  <nav class="navbar navbar-inverse">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">bgeo</a>
+    </div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>   
     <div class="page-header">
        <h1>bgeo: A mapping tool for biblical locations</h1>
        <p class="lead">Enter a location in the search box below (autocompletion will help with the spelling if the location is known). The results will be displayed on the map and in the table. Click on the references in the table to list all the references for that location. Finalnly click on an individual reference to show the text of the verse.</p>
